@@ -28,6 +28,8 @@ import com.graphhopper.util.*;
 
 import java.io.File;
 import java.io.IOException;
+import java.text.SimpleDateFormat;
+import java.util.Date;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -331,7 +333,7 @@ public class GraphHopper implements GraphHopperAPI
      * <p>
      * @throws IllegalStateException if graph is not instantiated.
      */
-    public Graph getGraph()
+    public GraphStorage getGraph()
     {
         if (graph == null)
             throw new IllegalStateException("Graph not initialized");
@@ -497,6 +499,7 @@ public class GraphHopper implements GraphHopperAPI
         try
         {
             importOSM();
+            graph.getProperties().put("osmreader.import.date", formatDateTime(new Date()));
         } catch (IOException ex)
         {
             throw new RuntimeException("Cannot parse OSM file " + getOSMFile(), ex);
@@ -521,7 +524,7 @@ public class GraphHopper implements GraphHopperAPI
         OSMReader reader = new OSMReader(graph, expectedCapacity).setWorkerThreads(workerThreads).setEncodingManager(encodingManager)
                 .setWayPointMaxDistance(wayPointMaxDistance).setEnableInstructions(enableInstructions);
         logger.info("using " + graph.toString() + ", memory:" + Helper.getMemInfo());
-        reader.doOSM2Graph(osmTmpFile);
+        reader.doOSM2Graph(osmTmpFile);        
         return reader;
     }
 
@@ -579,7 +582,7 @@ public class GraphHopper implements GraphHopperAPI
         graph.setSegmentSize(defaultSegmentSize);
         if (!graph.loadExisting())
             return false;
-        
+
         postProcessing();
         fullyLoaded = true;
         return true;
@@ -792,6 +795,7 @@ public class GraphHopper implements GraphHopperAPI
 
             logger.info("calling prepare.doWork ... (" + Helper.getMemInfo() + ")");
             prepare.doWork();
+            graph.getProperties().put("prepare.date", formatDateTime(new Date()));
         }
         graph.getProperties().put("prepare.done", tmpPrepare);
     }
@@ -833,5 +837,12 @@ public class GraphHopper implements GraphHopperAPI
     {
         if (fullyLoaded)
             throw new IllegalStateException("No configuration changes are possible after loading the graph");
+    }
+
+    // make sure this is identical to buildDate used in pom.xml
+    // <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
+    private String formatDateTime( Date date )
+    {
+        return new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ssZ").format(date);
     }
 }
