@@ -1,4 +1,5 @@
 0.3.0
+    web api: buildDate contains now timezone
     dijkstraNative is now dijkstraNativebi
     fixed #151
     calcWeight now contains reverse boolean to calculate correct direction dependent weight
